--- a/LESS/home.less
+++ b/LESS/home.less
@@ -1,5 +1,31 @@
-.headerImg {
-    width: 100%;
-    height: 55vh;
-    border-radius: 20px;
+header {
+
+    .headerImg {
+        width: 100%;
+        height: 40vh;
+        border-radius: 20px;
+    }
+
+    h3 {
+        padding-top: 3%;
+    }
+    p {
+        padding-top: 1%;
+    }
+}
+
+.middleContent {
+    padding-top: 3%;
+    display: flex;
+    justify-content: space-between;
+
+    .blocksImg {
+        width: 30%;
+        img {
+            width: 100%;
+        }
+    }
+    .howItWorks {
+        width: 60%;
+    }
 }
