--- a/LESS/global.less
+++ b/LESS/global.less
@@ -7,14 +7,14 @@
     font-size: 62.5%;
   }
   
-//   html, body {
-//     font-family: 'Ubuntu', sans-serif;
-//     color: @main-font-color;
-//   }
+  html, body {
+    font-family: @p-font;
+    color: @main-font-color;
+  }
   
   h1, h2, h3, h4, h5 {
     font-family: @heading-font;
-    // color: @header-font-color;
+    color: @heading-color;
   }
   
   h1 {
