--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -15,7 +15,7 @@
             text-decoration: none;
             font-size: 2.5rem;
             font-family: @heading-font;
-            color: black;
+            color: @heading-color;
         }
     }
 }
