--- a/LESS/home.less
+++ b/LESS/home.less
@@ -17,15 +17,25 @@ header {
 .middleContent {
     padding-top: 3%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
     .blocksImg {
         width: 30%;
         img {
             width: 100%;
+            border-radius: 20px;
         }
     }
     .howItWorks {
         width: 60%;
+
+        h3 {
+            text-align: center;
+        }
+
+        p {
+            padding-top: 2%;
+            line-height: 1.5;
+        }
     }
 }
