edited home-page styling

--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -17,5 +17,8 @@
             font-family: @heading-font;
             color: @heading-color;
         }
+        #signIn {
+            border: 1px solid red;
+        }
     }
 }
