--- a/LESS/variables.less
+++ b/LESS/variables.less
@@ -9,6 +9,8 @@
 
 
 //colors
-@bg-color: #DDDCDB;
+@bg-color: #EDECEC;
 @heading-color: #4E0505;
 @main-font-color: #4F4B4B;
+@btn-color: #605B5B;
+@hover-color: #EC0000;
