--- a/CSS/index.css
+++ b/CSS/index.css
@@ -155,8 +155,8 @@ h3 {
   font-size: 2.8rem;
 }
 p {
-  font-size: 1.6rem;
-  line-height: 1.4;
+  font-size: 1.8rem;
+  line-height: 1.8;
   font-family: 'Ubuntu', sans-serif;
 }
 .container {
@@ -165,7 +165,7 @@ p {
   margin: 0 auto;
 }
 body {
-  background-color: #DDDCDB;
+  background-color: #EDECEC;
 }
 .navbar {
   display: flex;
@@ -186,6 +186,9 @@ body {
   font-family: 'Bebas Neue', cursive;
   color: #4E0505;
 }
+.navbar nav #signIn {
+  border: 1px solid red;
+}
 header .headerImg {
   width: 100%;
   height: 40vh;
@@ -200,10 +203,10 @@ header p {
 .middleContent {
   padding-top: 3%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .middleContent .blocksImg {
-  width: 30%;
+  width: 35%;
 }
 .middleContent .blocksImg img {
   width: 100%;
@@ -214,8 +217,34 @@ header p {
 }
 .middleContent .howItWorks h3 {
   text-align: center;
+  margin-bottom: 3%;
 }
 .middleContent .howItWorks p {
   padding-top: 2%;
-  line-height: 1.5;
+}
+.lowerContent h3 {
+  padding-top: 4%;
+}
+.lowerContent p {
+  padding-top: 1%;
+  padding-bottom: 2%;
+}
+.lowerContent a {
+  text-decoration: none;
+  color: #4F4B4B;
+}
+.lowerContent a .btn {
+  border: 2px solid red;
+  border-radius: 5px;
+  background: #605B5B;
+  color: #EDECEC;
+  width: 8%;
+  padding: 1% 2%;
+  font-size: 2rem;
+  margin: 0 auto;
+  font-family: 'Bebas Neue', cursive;
+}
+.lowerContent a .btn:hover {
+  background: #EC0000;
+  color: black;
 }
