--- a/LESS/home.less
+++ b/LESS/home.less
@@ -1,26 +1,10 @@
-header {
-
-    .headerImg {
-        width: 100%;
-        height: 40vh;
-        border-radius: 20px;
-    }
-
-    h3 {
-        padding-top: 3%;
-    }
-    p {
-        padding-top: 1%;
-    }
-}
-
 .middleContent {
     padding-top: 3%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 
     .blocksImg {
-        width: 30%;
+        width: 35%;
         img {
             width: 100%;
             border-radius: 20px;
@@ -31,11 +15,43 @@ header {
 
         h3 {
             text-align: center;
+            margin-bottom: 3%;
         }
 
         p {
             padding-top: 2%;
-            line-height: 1.5;
         }
     }
+}
+
+.lowerContent {
+
+    h3 {
+        padding-top: 4%;
+    }
+    p {
+        padding-top: 1%;
+        padding-bottom: 2%;
+    }
+    a {
+        text-decoration: none;
+        color: @main-font-color;
+
+        .btn {
+            border: 2px solid red;
+            border-radius: 5px;
+            background: @btn-color;
+            color: @bg-color;
+            width: 8%;
+            padding: 1% 2%;
+            font-size: 2rem;
+            margin: 0 auto;
+            font-family: @heading-font;
+            &:hover {
+                background: @hover-color;
+                color: black;
+            }
+        }
+    }
+    
 }
