--- a/LESS/home.less
+++ b/LESS/home.less
@@ -42,11 +42,13 @@
             border-radius: 5px;
             background: @btn-color;
             color: @bg-color;
-            width: 8%;
+            width: 13%;
             padding: 1% 2%;
             font-size: 2rem;
             margin: 0 auto;
             font-family: @heading-font;
+            letter-spacing: 2px;
+            text-align: center;
             &:hover {
                 background: @hover-color;
                 color: black;
