--- a/CSS/index.css
+++ b/CSS/index.css
@@ -164,6 +164,11 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 800px) {
+  .container {
+    max-width: 90%;
+  }
+}
 body {
   background-color: #EDECEC;
 }
@@ -176,7 +181,7 @@ body {
   height: 8vh;
 }
 .navbar nav {
-  width: 30%;
+  width: 50%;
   display: flex;
   justify-content: space-around;
 }
@@ -187,11 +192,21 @@ body {
   color: #4E0505;
   letter-spacing: 2px;
 }
+@media (max-width: 800px) {
+  .navbar nav a {
+    padding-bottom: 2%;
+  }
+}
 .navbar nav #signIn {
   color: #605B5B;
 }
 .navbar nav #signIn:hover {
   -webkit-text-stroke: 1px #605B5B;
+}
+@media (max-width: 800px) {
+  .navbar {
+    flex-direction: column;
+  }
 }
 header .headerImg {
   width: 100%;
@@ -209,8 +224,20 @@ header p {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 800px) {
+  .middleContent {
+    flex-direction: column;
+  }
+}
 .middleContent .blocksImg {
   width: 35%;
+}
+@media (max-width: 800px) {
+  .middleContent .blocksImg {
+    margin: 0 auto;
+    padding-bottom: 5%;
+    width: 60%;
+  }
 }
 .middleContent .blocksImg img {
   width: 100%;
@@ -219,15 +246,30 @@ header p {
 .middleContent .howItWorks {
   width: 60%;
 }
+@media (max-width: 800px) {
+  .middleContent .howItWorks {
+    width: 100%;
+  }
+}
 .middleContent .howItWorks h3 {
   text-align: center;
   margin-bottom: 3%;
+}
+@media (max-width: 800px) {
+  .middleContent .howItWorks h3 {
+    margin-bottom: 1%;
+  }
 }
 .middleContent .howItWorks p {
   padding-top: 2%;
 }
 .lowerContent h3 {
   padding-top: 4%;
+}
+@media (max-width: 800px) {
+  .lowerContent h3 {
+    text-align: center;
+  }
 }
 .lowerContent p {
   padding-top: 1%;
@@ -254,6 +296,11 @@ header p {
   background: #EC0000;
   color: black;
 }
+@media (max-width: 800px) {
+  .lowerContent a .btn {
+    width: 20%;
+  }
+}
 .team {
   display: flex;
   flex-direction: column;
@@ -261,8 +308,42 @@ header p {
   align-items: center;
 }
 .team .member {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 20px;
+}
+.team .member:first-child {
   margin-top: 5%;
-  border: 1px solid black;
+}
+.team .member:hover {
+  background-color: #BEB8B8;
+}
+.team .member h3 {
+  padding-top: 10%;
+  text-align: center;
+  padding-bottom: 2%;
+}
+.team .member img {
+  width: 60%;
+  margin: 0 auto;
+  padding-bottom: 2%;
+  border-radius: 20px;
+}
+.team .member h4 {
+  font-size: 2rem;
+  text-align: center;
+  padding-bottom: 2%;
+}
+.team .member a {
+  text-align: center;
+  padding-bottom: 10%;
+  text-decoration: none;
+  color: #4E0505;
+  font-size: 1.5rem;
+}
+.team .member a:hover {
+  color: white;
 }
 footer {
   background: #BEB8B8;
