--- a/LESS/global.less
+++ b/LESS/global.less
@@ -39,6 +39,10 @@
     max-width: 70%;
     width: 100%;
     margin: 0 auto;  
+
+    @media @tablet {
+      max-width: 90%;
+    }
   }
   
   body {
