--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -1,30 +1,36 @@
 .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
     img {
-        height: 8vh;
+      height: 8vh;
     }
     nav {
-        width: 30%;
-        display: flex;
-        justify-content: space-around;
+      width: 50%;
+      display: flex;
+      justify-content: space-around;
 
-        a {
-            text-decoration: none;
-            font-size: 2.5rem;
-            font-family: @heading-font;
-            color: @heading-color;
-            letter-spacing: 2px;
+      a {
+        text-decoration: none;
+        font-size: 2.5rem;
+        font-family: @heading-font;
+        color: @heading-color;
+        letter-spacing: 2px;
+
+        @media @tablet {
+          padding-bottom: 2%;
         }
-        #signIn {
-            color: @btn-color;
-            
-            &:hover {
-                -webkit-text-stroke: 1px @btn-color;
-            }
-            
+      }
+      #signIn {
+        color: @btn-color;
+
+        &:hover {
+          -webkit-text-stroke: 1px @btn-color;
         }
+      }
     }
+    @media @tablet {
+        flex-direction: column;
+  }
 }
