--- a/LESS/header.less
+++ b/LESS/header.less
@@ -4,6 +4,10 @@ header {
         width: 100%;
         height: 40vh;
         border-radius: 20px;
+
+        @media @phone {
+            display: none;
+        }
     }
 
     h1 {
