--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -11,11 +11,15 @@
       display: flex;
       justify-content: space-around;
 
+      @media @tablet {
+          width: 100%;
+      }
+
       a {
         text-decoration: none;
         font-size: 2.5rem;
         font-family: @heading-font;
-        color: @heading-color;
+        color: @btn-color;
         letter-spacing: 2px;
 
         @media @tablet {
@@ -23,7 +27,7 @@
         }
       }
       #signIn {
-        color: @btn-color;
+        color: @heading-color;
 
         &:hover {
           -webkit-text-stroke: 1px @btn-color;
@@ -32,5 +36,5 @@
     }
     @media @tablet {
         flex-direction: column;
-  }
+    }
 }
