--- a/LESS/home.less
+++ b/LESS/home.less
@@ -1,40 +1,53 @@
 .middleContent {
     padding-top: 3%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 
     @media @desktop {
-        flex-direction: row-reverse;
-    }
-
-    @media @tablet {
         flex-direction: column;
     }
 
-    .blocksImg {
-        width: 35%;
 
-        @media @desktop {
-            width: 45%;
+    .imgs {
+        width: 30%;
 
-            @media @tablet {
-                margin: 0 auto;
-                padding-bottom: 5%;
-                width: 60%;
+
+        @media @tablet {
+            margin: 0 auto;
+            padding-bottom: 5%;
+            width: 60%;
     
-                @media @phone {
-                    width: 100%;
-                }
+            @media @phone {
+                width: 100%;
             }
-
         }
+
 
         img {
             width: 100%;
             border-radius: 20px;
         }
+
+        #dishes {
+            padding-top: 5%;
+
+            @media @desktop {
+                display: none;
+            }
+        }
+
+        @media @desktop {
+            width: 50%;
+            display: flex;
+
+            @media @phone {
+                width: 100%;
+            }
+            
+        }
     }
+
     .howItWorks {
         width: 50%;
 
@@ -45,6 +58,7 @@
         h3 {
             text-align: center;
             margin-bottom: 3%;
+            padding-top: 2%;
 
             @media @tablet {
                 margin-bottom: 1%;
@@ -55,9 +69,12 @@
             padding-top: 2%;
 
         }
+        @media @desktop {
+            width: 100%;
+        }
     }
-}
 
+}
 .lowerContent {
 
     h3 {
