--- a/LESS/global.less
+++ b/LESS/global.less
@@ -10,6 +10,7 @@
   html, body {
     font-family: @p-font;
     color: @main-font-color;
+    height: 100%;
   }
   
   h1, h2, h3, h4, h5 {
@@ -38,7 +39,8 @@
   .container {
     max-width: 80%;
     width: 100%;
-    margin: 0 auto;  
+    margin: 0 auto;
+    min-height: 100%;  
 
     @media @tablet {
       max-width: 90%;
