--- a/LESS/about.less
+++ b/LESS/about.less
@@ -1,13 +1,11 @@
 .team {
-    display: flex;
+    .flexBox(center);
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 
     .member {
-        display: flex;
+        .flexBox(space-between);
         flex-direction: column;
-        justify-content: space-between;
         border-radius: 20px;
 
         &:first-child {
@@ -19,9 +17,8 @@
         }
 
         h3 {
+            .center(2%);
             padding-top: 10%;
-            text-align: center;
-            padding-bottom: 2%;
         }
 
         img {
@@ -32,20 +29,18 @@
         }
         
         h4 {
+            .center(2%);
             font-size: 2rem;
-            text-align: center;
-            padding-bottom: 2%;
         }
 
         a {
-            text-align: center;
-            padding-bottom: 10%;
+            .center(10%);
             text-decoration: none;
             color: @heading-color;
             font-size: 1.5rem;
 
             &:hover {
-                color: white;
+                color: @bg-color;
             }
         }
     }
