--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -19,6 +19,8 @@
         font-family: @heading-font;
         color: @btn-color;
         letter-spacing: 2px;
+        .grow(1.2, 1.2);
+
         &:hover {
             -webkit-text-stroke: 1px @btn-color;
         }
